# AgentShim

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  deny.toml
.claude/: settings.local.json
.github/workflows/: ci.yaml  release.yaml
config/: gateway.example.yaml  gateway.minimal.yaml
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs  schema.rs  secrets.rs  validation.rs
crates/core/: Cargo.toml
crates/core/benches/: canonical_round_trip.rs
crates/core/src/: capabilities.rs  content.rs  error.rs  extensions.rs  ids.rs  lib.rs  media.rs  message.rs  policy.rs  request.rs  response.rs  stream.rs  target.rs  tool.rs  usage.rs
crates/core/src/mapping/: anthropic_wire.rs  mod.rs
crates/core/tests/: proptest_roundtrip.rs
crates/frontends/: Cargo.toml
crates/frontends/src/: lib.rs  sse.rs
crates/frontends/src/anthropic_messages/: decode.rs  encode_stream.rs  encode_unary.rs  mapping.rs  mod.rs  wire.rs
crates/frontends/src/openai_chat/: decode.rs  encode_stream.rs  encode_unary.rs  mapping.rs  mod.rs  wire.rs
crates/frontends/src/openai_responses/: decode.rs  encode_stream.rs  encode_unary.rs  mapping.rs  mod.rs  wire.rs
crates/gateway/: Cargo.toml
crates/gateway/benches/: gateway_overhead.rs
crates/gateway/src/: cli.rs  lib.rs  main.rs  pipeline.rs  server.rs  shutdown.rs  state.rs
crates/gateway/src/commands/: copilot_login.rs  copilot_models.rs  mod.rs  serve.rs  validate_config.rs
crates/gateway/src/handlers/: anthropic_messages.rs  mod.rs  openai_chat.rs  openai_responses.rs
crates/gateway/tests/: e2e_openai_chat.rs  healthz.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs  redaction.rs  request_id.rs  tracing_setup.rs
crates/protocol-tests/: Cargo.toml
crates/protocol-tests/fixtures/canonical/: text_stream.jsonl  tool_call_stream.jsonl
crates/protocol-tests/src/: lib.rs
crates/protocol-tests/tests/: anthropic_text_stream.rs  anthropic_unary.rs  cancellation_fuzz.rs  cross_anthropic_to_openai.rs  cross_openai_to_anthropic.rs  model_index_integration.rs  openai_text_stream.rs  openai_tool_call_stream.rs  openai_unary.rs
crates/providers/: Cargo.toml
crates/providers/src/: http_client.rs  lib.rs
crates/providers/src/anthropic/: mod.rs  passthrough.rs  request.rs  response.rs  wire.rs
crates/providers/src/deepseek/: mod.rs  request.rs  response.rs  usage.rs
crates/providers/src/gemini/: auth.rs  endpoint.rs  mod.rs  request.rs  response.rs  stream.rs  wire.rs
crates/providers/src/github_copilot/: auth.rs  credential_store.rs  endpoint.rs  headers.rs  mod.rs  models.rs  token_manager.rs
crates/providers/src/oai_chat_wire/: canonical_to_chat.rs  chat_sse_parser.rs  chat_unary_parser.rs  interleaved_reasoning.rs  mod.rs  wire.rs
crates/providers/src/openai_compatible/: encode_request.rs  mod.rs  parse_stream.rs  parse_unary.rs  wire.rs
crates/providers/src/openai_compatible/responses_api/: encode_request.rs  mod.rs  parse_stream.rs
crates/providers/tests/: anthropic_canonical_smoke.rs  anthropic_passthrough_smoke.rs  copilot_headers.rs  copilot_token_manager.rs  deepseek_smoke.rs  gemini_smoke.rs  openai_compatible_smoke.rs
crates/router/: Cargo.toml
crates/router/src/: circuit_breaker.rs  fallback.rs  lib.rs  model_index.rs  rate_limit.rs  resolver.rs  static_routes.rs
deploy/: Dockerfile  docker-compose.yaml
docs/: architecture.md  configuration.md  contributing.md  deployment.md
docs/adr/: 0001-anthropic-hybrid-path.md  0002-frozen-core-v0.2.md
docs/frontends/: anthropic-messages.md  openai-chat-completions.md
docs/providers/: anthropic.md  deepseek.md  gemini.md  openai-compatible.md
docs/superpowers/plans/: 2026-04-28-01-workspace-and-core.md  2026-04-28-02-config-observability-gateway-skeleton.md  2026-04-28-03-frontends-anthropic-and-openai.md  2026-04-28-04-providers-openai-compat-and-gateway-wiring.md  2026-04-28-05-github-copilot-provider.md  2026-04-28-06-cancellation-fuzz-perf-and-release-polish.md  2026-04-29-fuzzy-model-discovery.md  2026-04-30-01-oai-chat-wire-and-anthropic.md  2026-04-30-02-deepseek.md  2026-04-30-03-gemini.md  2026-04-30-04-vision-and-docs.md
docs/superpowers/specs/: 2026-04-28-agent-shim-design.md  2026-04-29-fuzzy-model-discovery-design.md  2026-04-30-phase-2-provider-breadth-design.md
scripts/: bench.sh
