[workspace]
resolver = "2"
members = ["crates/core", "crates/config", "crates/observability", "crates/gateway"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/anthropics/agent-shim"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value", "preserve_order"] }
thiserror = "1"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
proptest = "1"
base64 = "0.22"
futures-core = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "fs", "time"] }
axum = { version = "0.7", features = ["macros", "tokio", "http1"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "cors"] }
hyper = { version = "1", features = ["server"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["yaml", "env"] }
anyhow = "1"
async-trait = "0.1"
