[package]
name = "agent-shim-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "agent_shim_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bytes.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
