[package]
name = "agent-shim-frontends"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "agent_shim_frontends"
path = "src/lib.rs"

[dependencies]
agent-shim-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bytes.workspace = true
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["time"] }
parking_lot.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
