[package]
name = "agent-shim-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "agent_shim_providers"
path = "src/lib.rs"

[dependencies]
agent-shim-core = { path = "../core" }
agent-shim-config = { path = "../config" }
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
futures-util.workspace = true
futures-core.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
bytes.workspace = true
base64.workspace = true

[dev-dependencies]
mockito.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
