[package]
name = "agent-shim-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "agent_shim_providers"
path = "src/lib.rs"

[dependencies]
agent-shim-core = { path = "../core" }
agent-shim-config = { path = "../config" }
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
futures-util.workspace = true
futures-core.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
bytes.workspace = true
base64.workspace = true
uuid.workspace = true
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
url = "2"
# TLS plumbing for the optional `SSLKEYLOGFILE` debug branch in
# `http_client::build`. Default `reqwest::Client::builder()` does not honor
# the env var on its own; we have to construct a rustls `ClientConfig` and
# pass it via `use_preconfigured_tls`. Both crates are already in the lock
# file transitively (rustls via reqwest's `rustls-tls` feature), so adding
# them as direct deps does not pull in new code.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "1"

[dev-dependencies]
mockito.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
